--- a/_posts/2016-03-11-7.md
+++ b/_posts/2016-03-11-7.md
@@ -7,6 +7,8 @@ title: 如何面对AlphaGo战胜李世石这一残忍现实？
 
 据称围棋有3的361次方种局面，而目前为止，人类观测到的宇宙范围内，原子数量才10的80次方个，因此在限时的比赛中，人的计算力显然无法与机器相抗衡。有人说棋手的直觉可能是机器的最终杀器，所以快棋赛中人获胜的概率更大，我觉得这个说法不太科学，再牛逼的直觉也抵不上精准的算法，如果机器会输掉，一定是硬件的性能不够高，只要硬件性能足够，越快的比赛人越吃亏。
 
+![alphago](http://oifrca68z.bkt.clouddn.com/zeove/image/AlphaGo.gif)
+
 自从汽车在一百年前抢了马的饭碗以后，后来自动化机器又抢了产业工人的饭碗，到现在各种无人值守、智能结算、扫地机器人、自动咖啡机、无人驾驶汽车等科技产品正在陆续普及，服务业已经面临着新一轮的失业大潮。而今天，从事所谓智力行业的、工作难度相对更高级一点的教师、咨询师、技术员、投资经理等，看到围棋大师李世石的两连败，不知作何感想？这些专业人士跟大数据的能力比起来，下课只是个时间问题。
 
 纵观人类被机器欺负的历史，有一个普遍的规律：凡是涉及体力、计算力、逻辑推演力的行业，都会被机器所垄断，被誉为“计算机科学之父”的图灵，早在上世纪三十年代就预见了这一趋势。然而图灵没有预见到的是，有一天机器还会具备“学习”能力！战胜李世石的AlphaGo就是这样一名会自我学习的机器人，它的原理大致如下：
