--- a/_posts/2015-11-16-12.md
+++ b/_posts/2015-11-16-12.md
@@ -7,6 +7,8 @@ title: 所谓暴力美学
 
 影片剧情简单，一个女杀手爱上黑老大，怀孕后为了让孩子清白来到世间而金盆洗手，欲嫁给另一人，黑老大心有不甘，在婚礼彩排现场将新郎新娘一众人等开枪屠杀，惟女杀手活了下来，并在昏迷4年后苏醒，然后展开了义无反顾的复仇，最后杀死了孩子的亲生父亲，即黑老大比尔。
 
+![杀死比尔](http://oifrca68z.bkt.clouddn.com/zeove/image/shasibier.jpg)
+
 查了下维基百科：导演昆汀·塔伦蒂诺，草根出身，自学成才，擅长颠三倒四的讲述故事，电影的特色为讽刺题材、暴力美学以及新黑色电影的风格。获奖无数。
 
 《杀死比尔》中血腥场面不少，但表现的确另类，要么是角度转换、要么是黑白镜头遮掩，让观众能看到暴力的场景，却又不那么血淋林的刺激感官，即所谓的暴力美学——“以美学的方式呈现，诗意的画面，甚至幻想中的镜头来表现人性暴力面和暴力行为。观赏者本身往往惊叹于艺术化的表现形式，无法对内容产生具体的不舒适感。”
