--- a/_posts/2015-10-26-14.md
+++ b/_posts/2015-10-26-14.md
@@ -5,6 +5,8 @@ title: 你的薪水偏高了吗？
 
 前几天看到一篇文章，大意是说目前国内程序猿的薪水普遍偏高，高薪低能的程序猿要占一半。还有个调查报告显示，工作一年的程序员平均年薪为10.8万，两年工作经验的平均薪水达到了16.7万，3年工作经验的年薪超过20万。结合最近发布的32城人均薪酬榜来看，程序猿们的收入的确偏高，如果从真实的国内人均收入来看，就更高了。
 
+![32城薪水表](http://oifrca68z.bkt.clouddn.com/zeove/image/32chengrenjunxinchoubang.jpg)
+
 我很庆幸，身处高薪的互联网行业，也很遗憾，我不是程序猿。但我对那篇文章所讲述的事实深有体会，为了赶项目进度，招人几乎已经到了“是个人都要”的地步，给刚毕业三个月的新手都开到了7K，一两年经验的基本都上万了，而这，还仅仅是在互联网产业并不发达的内地城市重庆！在其他行业，同等年限的工作经验，同样是技术岗位，估计也少有达到这种薪酬水平的企业。在经济持续下行的压力下，连一向财大气粗的BAT都纷纷缩减了用人规模，百度最近更是停止招聘，“如有个别极特殊战略考量需求，需刘辉和李彦宏特批后方可招人。”可见互联网技术人才给企业带来的成本压力不是一般的大，是什么造就了程序猿过高的薪酬水平？
 
 当下无疑是互联网的时代，所有的行业都在拼命地跟互联网沾边，“互联网+”成为搜索引擎里的热词，民间的热钱一个劲地往互联网邻域里灌，掀起了风险投资、全民创业的热潮，动辄就是O2O，动辄就是P2P，动辄就是众筹…总之，似乎这行业里不缺项目不缺钱，就缺人！据说有一阵连BAT都疯狂的招聘实习生来写代码。薪水就这么涨起来了。
