--- a/_posts/2015-10-17-16.md
+++ b/_posts/2015-10-17-16.md
@@ -7,6 +7,8 @@ title: 启用密码管理器Enpass
 
 后来我用上了Lastpass这款密码管理器，PC端可直接导入浏览器默认保存的各种密码进行保存，安装相应的浏览器插件，可在访问各种网站的时候自动填充用户名和密码，再也无须每次手动输入登录信息了，非常便捷。遗憾的是Lastpass没有黑莓手机的原生客户端，作为黑莓脑残粉我表示无法接受。而黑莓应用商店里仅有的跨平台、支持云端同步、还原的原生密码管理器Enpass售价9.99美金，实在有些贵，所以一直没舍得买。前天看到Enpass限时五折促销的消息后，果断入手了。
 
+![Enpass](http://oifrca68z.bkt.clouddn.com/zeove/image/enpass3.jpg)
+
 值得一提的是，Enpass无须注册，通过唯一需要你记住的主密码和设备自动识别进行登陆和管理，这意味着你的所有信息都保存在本地，无须担心安全问题。
 
 与其他密码管理器相比，Enpass的用户界面更加友好，分类更加明晰，且具有很高的延展性。手机端也可通过内置的Enpass浏览器一路自动填充，方便快捷。
