--- a/_posts/2015-10-17-15.md
+++ b/_posts/2015-10-17-15.md
@@ -9,6 +9,8 @@ title: 黑莓，一款不适合多数人的手机
 
 黑莓并没例外，BB10系统的手机全都可触屏操作，但在部分机型上，黑莓仍旧保留了其一直领先的物理键盘。总有一拨人喜欢键盘打字的感觉，至少在PC机、笔电等桌面产品还以键盘为主的今天，这种感觉是很难戒掉的。况且黑莓的键盘技术并非只是手感很好的硬件做工，它也与时俱进的发展出触控键盘、键盘飞字选字等技术，反响都很不错。再则物理键盘一个很大的优势就是快捷键，你可自行设定若干快捷键，很大程度上提高了用户操作手机的效率。相比触屏打字来说，黑莓的物理键盘在按键反馈上体验更优，在盲打上更是甩触屏几条街。我用黑莓基本是盲打，多是整句整句的打出，不知是它的字库更智能还是什么原因，很少出现词语联想的失误，我还从没有在词库里自行定义过任何词语，如果添加自定义，打字速度就更牛逼了。
 
+![heimei](http://oifrca68z.bkt.clouddn.com/zeove/image/blackberry-keyboard.jpg)
+
 物理键盘，注定了只有喜欢敲键盘感觉的人，喜欢使用快捷键的人，喜欢盲打的人才会留恋它，显然，在移动端更重视这些体验的人并不多。
 
 看软件。这是黑莓的心病，而且可能永远无法治好了。如果连键盘爱好者都舍它而去，那只有一个原因，就是各种应用软件实在太少了。黑莓本身的系统软件是很赞的，流畅、高效、独特，跟苹果一样，都是封闭系统，所以很少出现安卓那样的安全问题。但这是一个开放应用的世界，一个企业不可能提供所有的服务，必须让全世界的开发者都主动加入到你的平台应用开发中来，这也是互联网全球脑的一部分，才能满足有各种各样需求的用户。很多手机厂商窥见了这一趋势，纷纷加入了开放的安卓阵营，将安卓的市场越做越大，以致所有开发者都将主要目标对准了安卓和苹果系统，再也没有精力为黑莓开发应用，进而导致黑莓生态圈越来越荒芜，用户也越来越少，然后开发者就更缺乏为其开发应用的动力，恶性循环停不下来了。
