--- a/_posts/2015-04-22-23.md
+++ b/_posts/2015-04-22-23.md
@@ -5,6 +5,8 @@ title: 黑莓玩家俱乐部折腾记
 
 最近闲得蛋疼，把准备用来卖钱钱的bber.club这个域名自己吃了，搞了个黑莓玩家俱乐部，装的开源程序，无节操的把底部版权标识给去掉了，不过源代码里还是保留了，做人不能太绝嘛…
 
+![heimeiwanjiajulebu](http://oifrca68z.bkt.clouddn.com/zeove/image/heimeiwanjiajulebu.jpg)
+
 想做一个黑莓小圈子网站的想法由来已久，这个圈子的人有三个特点：极客范儿、喜欢装逼和长得帅。所以要想把这群人聚在一起，难度太大了，你谁啊？你做个站我就去啊？我像那种随波逐流的人吗？得，我还真就想做个站试试，看你来不来。
 
 在开源程序的大海里游荡了几天，最终选定了Thinksaas – 一个轻社区开源程序，实在不想做传统的那种论坛，太腻味，而且现在混论坛的人也不多了，更别说本来就小众的黑莓玩家。遥想当年猫扑的清蒸小白兔时代，我就是那嘴贱无敌的奥陶纪，每日耍贫嘴、赚MP，跟帖无数，一时风光无俩。今天论坛的没落，是网络媒体发展的必然结果，智能手机又加速了移动体验不够好的论坛的衰落。所以在做黑莓玩家俱乐部的时候，压根没考虑DISCUZ，或许它在移动端上也有改进，但给我的印象始终太重了，想想黑莓那少得可怜的应用程序，能分出几个版块啊？而且过时的信息流价值并不大，看似内容繁多的传统论坛，那些老帖真的有存在的必要么？
