--- a/_posts/2015-06-12-19.md
+++ b/_posts/2015-06-12-19.md
@@ -16,3 +16,5 @@ title: 对手机拍照的一点认识
 如果想让别人领会你当时的心情和意境，最好给照片取一个深合主题的名字。这个名字基本就说明了你为什么要拍这张照片，为什么要把它拍成这样，看到名字就能很快理解这张照片想要表达的意思。每一张照片都应该有它自己的名字，而不是IMG_20150607这样的东西。
 
 那天我跑步，来到一棵大树下喘口气，偶然抬头发现了这样的美景，掏出我的黑莓手机拍了下来，给它起了个名字叫“光阴”。
+
+![guangyin](http://oifrca68z.bkt.clouddn.com/guangyin1.jpg)
