--- a/_posts/2015-07-18-18.md
+++ b/_posts/2015-07-18-18.md
@@ -18,3 +18,5 @@ title: 想把余生变诗篇
 最近有本热门的书，叫《无声告白》，扉页有一句话写得很好：我们终此一生，就是要摆脱他人的期待，找到真正的自己。如何能找到真正的自己？没有一千次的挫折、一万次的失败，没有诸多的经历和冒险，怎么能明白自己是谁？能做什么？不能做什么？我们仅仅是为别人而活着吗？生命的意义到底是什么？每个人对此都有不同的答案，但没有谁的答案是标准答案，我们需要去走自己的路，明白自己生命的意义。乔布斯临终前认真贯彻了“将生命中的每一天都当成是最后一天”这条鸡汤哲学，但他是否明白了生命的意义没人能确定，博友勺子经常画的那个人生倒计时表格，能让人看到生命的有限，但我们是否想过：到底该如何填充那些生命的格子？
 
 借保利地产总经理的辞职信，为自己明志：想把余生变诗篇。
+
+![cizhixin](http://oifrca68z.bkt.clouddn.com/zeove/image/cizhixin.jpg)
