--- a/_posts/2014-11-26-40.md
+++ b/_posts/2014-11-26-40.md
@@ -7,6 +7,8 @@ title: 养壁虎
 
 回到家想给儿子涨涨见识，岂料他毫无兴趣，小看一眼便扬长而去，现在的小孩都怎么了？对小动物没有一点爱心和亲近感，我小时候捉到一个甲壳虫能玩上半天，还会花心思用火柴盒加上两颗扣子做个小车，给它套上，让它拉那些石头啥的，累死为止。
 
+![bihu](http://oifrca68z.bkt.clouddn.com/zeove/image/bihu.jpg)
+
 壁虎，又称守宫、檐蛇或四脚蛇，属于中小型的蜥蜴。壁虎的脚趾上有将近10亿根的微小特殊细毛，能让它飞檐走壁，甚至在玻璃上也不会掉下来，造物主真是神奇啊！这只小壁虎长约3厘米，应该是刚出生不久，属于什么科目不清楚，据说壁虎科有大约1050个已知类目。壁虎是季节性的动物，现在应该正处在冬眠期，它独自在外晃荡，且动作不够灵敏，才被我捉到，可能是在某个墙头睡觉不小心掉下来了，真可怜。
 
 相遇就是缘分，我决定将其收入门下。上网查了下壁虎的喂养，主要食物是蚊子、苍蝇和飞蛾，而且要吃活的，它的眼睛只对活动的猎物有感应…活的就不说了，这大冬天的连死的都不好找啊！饲养环境要有沙石、小草，尽量模仿野外环境，沙石还能帮助壁虎脱皮。最重要的是环境要保持一定的湿度，湿度太低壁虎脱皮不顺会死掉，不够通风壁虎也容易生病。我到阳台花盆里搞来几颗碎石简单布置，先将就一下，又找来一支吸管，剪了一截，往里灌水，扭弯，做了个水平仪，它如果想喝水，应该自己能喝到。至于食物，只有第二天带到公司去，公司好像还有一些夏天剩下的蚊子余孽。睡吧，一夜无话。
