--- a/_posts/2014-12-10-38.md
+++ b/_posts/2014-12-10-38.md
@@ -24,3 +24,5 @@ title: 星辰无尽
 > 我们在装模作样，我们自以为很重要，妄想着我们人类地位特殊，在宇宙中与众不同，这一切，都因这泛着苍白蓝光的小点而动摇。我们的星球，不过是一粒孤独的微尘，笼罩在伟大的宇宙黑暗之中。我们默默无闻，沉浸在无尽的浩瀚里，没有一丝线索显示，除了我们自己，还有谁能拯救我们。地球是目前已知唯一有生命的世界，生命再无其他去处，至少在不久的将来，亦是如此。没有外星球供人类迁移，只可参观，无法定居，不管你喜欢与否，现在，只有地球可以供我们立足。
 
 > 据说研习天文，可以让人谦卑，塑造人心，磨炼个性，也许再没有更好的方法，能比这遥远的画面，更好的显示出人类的自负和愚蠢。对我而言，它强调了我们的责任，要对人更友善，懂得珍惜与爱护，这泛着苍白蓝光的小点，是我们知道的唯一家园。
+
+![xingchenwujin](http://oifrca68z.bkt.clouddn.com/zeove/image/xingchenwujin.jpg)
