--- a/_posts/2015-02-03-35.md
+++ b/_posts/2015-02-03-35.md
@@ -3,6 +3,8 @@ lay out: post
 title: 分享用了三年的博客主题
 ---
 
+![zhuti](http://oifrca68z.bkt.clouddn.com/zeove/image/zheerfudebokezhuti.jpg)
+
 这是我本次更换主题之前，一款用了三年的博客主题。这款主题的特点就是简单，几乎纯文字，没有任何特效，边栏的自定义程度很高，在测评网站上的测试得分也不错，适合那些只想用心写文章，没兴趣或没精力折腾主题的博主。
 
 这款主题是我2012年在一个律师的博客上看到的，很喜欢，就根据他博客的代码去搜索到了这款主题的源文件，然后经过自己断断续续的加工，就成了上面截图中的样子，我自己认为在网页端，它的用户体验是比较好的。一个读者访问你的博客，真正想要看到的内容，我认为就是五个方面：
