--- a/_posts/2015-02-26-31.md
+++ b/_posts/2015-02-26-31.md
@@ -7,6 +7,8 @@ title: 天才的共振
 
 影片讲述一个颇有天赋的学生，在一位颇有资历的老师旗下学习架子鼓乐器，二者均是数一数二的人物。但老师的教学风格很暴力，让这个学生沮丧不已，对乐器的学习从最初的痴迷，变成了彻底的放弃，到最后竟然升华成了疯狂。
 
+![baoliegushou](http://oifrca68z.bkt.clouddn.com/zeove/image/baoliegushou.jpg)
+
 影片争议很大，多数人不赞同老师暴力的教学风格，认为这种风格会埋没掉有才华的学生，稍有自尊心的人都受不了那种对能力的否定、对人格的羞辱。还有部分人大呼影片很励志，感叹十年磨一剑、一朝成名天下知啥的。对不起，我觉得你没看懂。
 
 这部影片跟我们绝大绝大绝大多数人都没什么关系，那是人家两个天才之间的故事。
