--- a/_posts/2015-03-21-28.md
+++ b/_posts/2015-03-21-28.md
@@ -5,6 +5,8 @@ title: 意淫黑莓
 
 10.3.1以后，黑莓全面兼容安卓软件，主流的各种应用，都能通过APK文件安装到黑莓10系统中，除了少数应用的界面变形和耗电情况外，多数应用运行良好，有些甚至是完美，比如Telegram。
 
+![heimeiyingyong](http://oifrca68z.bkt.clouddn.com/zeove/image/blackberry-passport.jpg)
+
 按理说这是好事，黑莓用户也可以享受安卓平台的应用了，黑莓最大的诟病，即应用软件不足的问题被巧妙的解决了。但我觉得这里面有不可预知的风险，如果兼容了安卓软件，那以后还有谁愿意开发黑莓的原生软件呢？如果最后用的都是安卓软件，那黑莓应用商店的关门只是时间问题。应用商店的关闭并不是简单的失去一部分金钱收益，而是失去大量的开发者，失去品牌拥趸，失去支撑一个系统的基础，如果这样，何必还要做黑莓系统？不如直接在黑莓手机上运行安卓系统算了，如果连系统都没有了，何必还要做几无利润的黑莓手机硬件？黑莓死矣。
 
 或许黑莓正想这样死去，有的人死了，他还活着。黑莓正努力将其软件服务，包括BBM、安全和HUB等商业服务部署到苹果和安卓系统中去，希望通过软件服务对其他平台的支持和授权来赚取利润。这是一个彻底的转型，它意味着黑莓迟早会放弃硬件设备，转型做一家软件服务公司。这条路我认为有一半是对的，因为黑莓在手机领域有无数的专利，以前这些专利只是用来保护自己的产品，但是黑莓手机硬件的销售每况愈下，与其用这些专利来保护可怜的那点硬件收益，不如将它授权给其他平台使用，赚取的利润显然会多很多。
