--- a/_posts/2015-02-04-34.md
+++ b/_posts/2015-02-04-34.md
@@ -7,6 +7,8 @@ title: 把照片备份到Flickr
 
 我目前所有需要备份的照片和影音文件的数据在50G左右，要说并不多，但能提供这个量级存储的免费服务也不多。最信赖的Dropbox只有13G，Onedrive只有30G，Google Drive只有15G，Copy有15G，MEGA虽然有50G，但也无法再放数据进去了，而且考虑到后两个企业都不算大，能稳定提供多久的服务还是个问号。还有其他的一些办法，比如利用Facebook的相册进行免费存储，对上面的各种云存储服务开通多个帐号等，我是觉得虽然我喜欢免费的东西，但还不至于这么没节操…好吧，主要是嫌麻烦。
 
+![flickr](http://oifrca68z.bkt.clouddn.com/zeove/image/Flickr.jpg)
+
 比来比去，在免费的前提下，最佳的选择是Flickr，免费1TB容量，作为普通人够用一辈子了；其次是Google Drive，虽然只有15G容量，且是所有谷歌服务共享，但规格在2048×2048以内的照片是不占用容量的，也就是说只要你的照片都在这个规格以内，你可以无限上传到Google Drive里。考虑到Flickr是专业的照片服务网站，而且1TB也用不完，最后就定在Flickr了。至于有些人说的Flickr被雅虎收购以后日趋没落，我倒不以为然，没有永恒的企业，只要在当下能满足我的需求即可，要是哪天Flickr宣布关闭，无非就是把备份的数据换个地方而已，如果没有足够容量的免费服务可选，那就选个靠谱的服务付费呗。
 
 或许有人会问了：不是还有百度云、微云这些吗？是的，这些我都有账号，百度云还有2TB容量，但熟悉我的人都知道，我对国内的互联网产品向来是不闻不问，基本不用的，原因很简单：理念不合，我鄙视这些下三滥的玩意儿。但在照片存储这事儿上我怂了，Flickr虽然能解决照片的问题，但1TB也存不了多少视频啊，只能把优质的简短视频保存在Flickr，其他的另想办法。所以就把国内的各种云服务，当作备胎来使了，主备胎就是容量2TB的百度云，所有照片、视频、文档啥的，只要能上传的东西都往里面扔，以后不够了，就再开几个小号接着扔，算是一个大行李箱，而Flickr，则是行李箱里一本精致的相册。
