--- a/_posts/2014-11-21-41.md
+++ b/_posts/2014-11-21-41.md
@@ -17,7 +17,7 @@ title: 如果爱，请深爱 – 私评黑莓Passport
 
 ![heimei](http://oifrca68z.bkt.clouddn.com/zeove/image/blackberry-desktop-1.jpg)   ![heimei](http://oifrca68z.bkt.clouddn.com/zeove/image/blackberry-desktop-2.jpg)
 
-玩黑莓，有一样东西是不能不体验的，就是黑莓的BES服务，绝大多数国内的莓友对这玩意是既熟悉又陌生，熟悉是因为听得太多，陌生是因为玩的很少。BES的具体解释看[这里](http://www.mail2bes.com/?page_id=109)，如果还是不懂，不要紧，我也不太懂，粗浅的翻译一下：开通BES后，会在你手机里建立一个专门的工作空间（你可以理解为电脑装了双系统），这个空间里的数据都是高度加密的，仅通过一小段各个国家运营商的通信线路就直接接入了黑莓在全球部署的私有网络，安全性极高，数据不会被各个运营商监控。跨国企业配备黑莓手机给员工使用，员工就可以在这个工作空间里收发工作邮件、处理公务及参加公司内部的视讯会议等，这个空间里的所有文件都无法拷贝出去，所以企业也放心，而员工仍可以通过个人空间玩自己喜欢的各种应用程序等，互不影响，大体是这么个意思。那作为普通的黑莓用户，开通这个有什么意义呢？翻墙。在工作空间里你可以使用Facebook、Twitter、Youtube等国内被墙掉的互联网服务，在Wifi和移动网络下自然翻墙，无须再挂VPN。作为翻墙爱好者，我果断申请了Mail2bes提供的[BES免费体验](http://www.mail2bes.com/)，并成功开通，麻麻再也不用担心我用黑莓翻不了墙了，这是我的工作空间：
+玩黑莓，有一样东西是不能不体验的，就是黑莓的BES服务，绝大多数国内的莓友对这玩意是既熟悉又陌生，熟悉是因为听得太多，陌生是因为玩的很少。BES的具体解释看[这里](http://www.mail2bes.com/?page_id=109)，如果还是不懂，不要紧，我也不太懂，粗浅的翻译一下：开通BES后，会在你手机里建立一个专门的工作空间（你可以理解为电脑装了双系统），这个空间里的数据都是高度加密的，仅通过一小段各个国家运营商的通信线路就直接接入了黑莓在全球部署的私有网络，安全性极高，数据不会被各个运营商监控。跨国企业配备黑莓手机给员工使用，员工就可以在这个工作空间里收发工作邮件、处理公务及参加公司内部的视讯会议等，这个空间里的所有文件都无法拷贝出去，所以企业也放心，而员工仍可以通过个人空间玩自己喜欢的各种应用程序等，互不影响，大体是这么个意思。那作为普通的黑莓用户，开通这个有什么意义呢？翻墙。在工作空间里你可以使用Facebook、Twitter、Youtube等国内被墙掉的互联网服务，在Wifi和移动网络下自然翻墙，无须再挂VPN。作为翻墙爱好者，我果断申请了Mail2bes提供的[BES免费体验](http://www.mail2bes.com/)，并成功开通，麻麻再也不用担心我用黑莓翻不了墙了。
 
 工作空间里的应用比个人空间里的应用要少，这取决于你的公司或你的工作空间提供商（比如刚才的Mail2bes），他们允许你用什么程序，你就能下载到什么程序。刚才推荐的虽然是免费体验，但如果你有想要使用的应用，可以直接跟他们的管理员说，一般都会给予满足。最重要的是，他们提供的是免费体验服务，要知道在移动和联通开通BES，是要收取每月几十元的费用的，作为黑莓爱好者，又不能不体验一下完整的黑莓服务，所以Mail2bes是个很好的选择。只不过因为成本问题，他们的免费体验帐号随时可能停止，如果要想稳定的使用工作空间，可以付费，每年300元，贵不贵，就看你的情怀有多深了。
 
