--- a/_posts/2011-10-01-101.md
+++ b/_posts/2011-10-01-101.md
@@ -20,3 +20,5 @@ title: 满江红·沧海横流
 几度东风吹世换，沧海横流今尤在。
 
 笑古今，多少繁华后，又重来。
+
+![canghaihengliu](http://oifrca68z.bkt.clouddn.com/In-the-Devils-Mouth-1200px60.jpg)
