--- a/_posts/2012-06-22-95.md
+++ b/_posts/2012-06-22-95.md
@@ -11,6 +11,8 @@ title: 谢谢你，维基百科
 
 Jimmy Donal Wales，维基百科创始人之一。现为维基媒体基金会理事会荣誉主席。Wales 一直是艾茵·兰德的客观主义哲学的热诚追随者。他在接受C-SPAN的Q&A谈话节目访问时，他说道：“独立的美德”是他个人特质里最重要的部分。当他被问到他对兰德思想的追随是否会让他与任何政治哲学有所关联时，Wales 才称他自己是一个自由意志主义者，不过他说他并不喜欢这一称呼，因为他认为美国的自由党只是一群“疯子”。他举出“自由、个人权利、在与他人相处时绝不先行动用暴力”作为他处世的基本原则。
 
+![jimmy wales](http://oifrca68z.bkt.clouddn.com/zeove/image/weijibaike.jpg)
+
 一直以来，维基百科不接受广告，只接受募捐。Wales在呼吁捐助的信中写道：
 
 “Google有百万台服务器，Yahoo有13,000多名员工。我们有679台服务器和95名职员。 维基百科是世界上排名第五的网站，每月为4.5亿用户提供服务，有着数十亿的页面阅览量。维基百科是个特别的地方。它像座图书馆、像座公园，也像一座心灵的殿堂。它是我们思考、学习、与人分享知识的地方。当我创立维基百科的时候，我是可以让它成为靠广告赚钱的营利公司，但我决定做点不同的事情。这些年来，我们一直致力于确保它的精简与节流。我们实践我们的使命，避免不必要的支出与浪费。”
