--- a/_posts/2013-04-15-75.md
+++ b/_posts/2013-04-15-75.md
@@ -7,6 +7,8 @@ title: FITBIT，你值得拥有！
 
 FITBIT是一种步行、爬楼和睡眠的多功能记录仪，旗下有多款产品，我入的是FITBIT ONE，体积非常小，非常便携，做工也很精致。别看这玩意小，功能还蛮多，能精确记录你每日的步行步数、步行距离、爬楼层数、燃烧了多少卡路里、监控你的睡眠情况以及静音闹钟等，最有意思的是可以让你与使用FITBIT的用户一起相互认识，并通过公开数据、进行排名、颁发徽章的形式激励你进行锻炼，这对那些难以坚持锻炼的人有不小的促进作用。
 
+![fitbit](http://oifrca68z.bkt.clouddn.com/zeove/image/FITBIT.jpg)
+
 全套产品包括一个FITBIT ONE、一个带夹子的外套、一个蓝牙接收器、一条腕带和一根充电线
 
 其实类似的产品有不少了，选择FITBIT主要是它做得最早，产品感觉更成熟、更好用，同时，对我这样的小众爱好者来说，全国不到300名用户（根据中国用户组群的数据统计）的FITBIT显然是个装逼利器，走到哪里都是最亮的那颗星....值得一提的是那个蓝牙4.0的接收器，直接插在电脑的USB接口上，6米范围内，FITBIT里的数据会自动同步到网上；该无线同步功能也支持Iphone4S、New Ipad及以上的iOS产品或指定款的Android手机。无线同步的功能非常酷，其他竞品貌似还做不到这一点。
