--- a/_posts/2013-12-20-69.md
+++ b/_posts/2013-12-20-69.md
@@ -5,6 +5,8 @@ title: 炉石传说，你不能错过的卡牌游戏！
 
 10月23日，暴雪旗下集换式卡片游戏《炉石传说：魔兽英雄传》在中国大陆启动封测，各大游戏、社交网站议论纷纷，激活码一码难求，掀起了一阵卡牌游戏热！
 
+![hearthstone](http://oifrca68z.bkt.clouddn.com/zeove/image/lushichuanshuo.jpg)
+
 《炉石传说》是一款以魔兽世界为背景的免费的电子卡牌策略类游戏，成功做到了轻松上手和极致乐趣的完美结合。玩家无须拥有丰富的游戏经验，五分钟学会操作，十分钟畅玩一局，在游戏中体验恢弘的西方魔兽传说故事。而“暴雪出品，必属精品”的业界口碑，能让每一个免费玩家充分感受到《炉石传说》最大的特点是靠策略而不是金钱取得胜利。
 
 为什么叫《炉石传说》？据说中世纪欧洲有个古老的传统，离家远行的人们会从家中壁炉里取走一块石头，当人们想起家乡的时候，看看身边的炉石，可以缓解思乡之情。由此引申为当一个人在外奔波、漂泊，疲惫的时候，回家会让你的精神更充沛，因此炉石常在游戏中作为一种回城用品，使用炉石，即刻到家，满血复活。
