--- a/_posts/2014-02-22-59.md
+++ b/_posts/2014-02-22-59.md
@@ -3,6 +3,8 @@ lay out: post
 title: 凡是过去，皆为序曲
 ---
 
+![dashuju](http://oifrca68z.bkt.clouddn.com/zeove/image/dashuju.jpg)
+
 看完《大数据时代》，对经常听到的“大数据”一词有了基本认识。尽管该书的推荐人不同意，但我还是认为“大数据”就是“数据大”。
 
 简而言之，大数据就是当今社会各领域各种数字化数据的集合，包括但不限于文字、图片、影音及各种信息化数据。我们经常吐槽的微博、推特、博客、评论等信息，网站、电商公司后台统计的流量、营销、用户数据，政府机构进行的人口普查、市政建设、财税统计等等。
