--- a/_posts/2014-07-23-54.md
+++ b/_posts/2014-07-23-54.md
@@ -7,6 +7,8 @@ title: 黑莓：即使落幕，也很精彩
 
 近日，黑莓发布了其即将于9月份上市的最新旗舰级智能机Blackberry Passport，我承认，当时我的下巴真的掉到桌子上了。太不可思议了，在我看来，这是继iPhone之后最惊艳的手机工业设计，用任何赞美之词都不为过，不可能更好了！
 
+![heimei](http://oifrca68z.bkt.clouddn.com/zeove/image/heimei.jpg)
+
 世界各大科技媒体均大篇幅报道了这一新闻，国内媒体也发了[《Passport：给你一个重新爱上黑莓的理由》](http://www.ifanr.com/429886)一文，这或许是黑莓近几年来最受媒体关注的一次，关注点有三：一是看一个将死企业最后的折腾；二是Passport独特的大方脸设计带来了鲜明的爱恨两派之争；三是Passport能否重新获得那些现在正在使用苹果和安卓的、曾经的莓粉的亲睐。
 
 因为苹果安卓的猛然崛起和应用生态系统的失败，曾经的智能机之王黑莓自2008年以来日趋没落，目前黑莓的全球市场份额已滑落至0.6%，死在旦夕。年前新上任的CEO程守宗是一个传奇的“救火队长”，他最知名的案例是将一个快死的企业迅速盈利，并最终以50多亿美金的价格出售。当时他的临危受命并没有引起太多的关注，人们始终相信，黑莓的消失不过是时间问题。2014年以来，程守宗进行了一系列大刀阔斧的改革，将黑莓核心定位在企业级市场，同时不放弃大众消费市场，并将黑莓最有价值的软件服务BBM推向苹果、安卓和WP平台，黑莓竟然在2015 财年第一财季实现了2300万美金的净盈利，让资本市场大跌眼镜！这就是一个身价1.35亿美金的职业经理人的价值。
