--- a/_posts/2014-10-21-49.md
+++ b/_posts/2014-10-21-49.md
@@ -5,6 +5,8 @@ title: 这篇文章能让你戒烟
 
 看完推友春夏之交@cxzj推荐的《这书能让你戒烟》，我熄灭了手中的烟头，将剩下的大半盒香烟连着打火机、烟灰缸一起，扔进了垃圾桶。如作者所说，当你灭掉手里的香烟时，你就戒烟成功了。这话听起来不可思议，但看完这书后你会发现确实如此，你以往为戒烟所作的各种努力、坚持、煎熬等都太小题大作了，戒烟其实很简单。
 
+![jieyan](http://oifrca68z.bkt.clouddn.com/zeove/image/jieyan.jpg)
+
 我于11年2月戒烟，后来还写了篇博文《戒烟半年记》，当时我怀疑自己肺出问题了，迫不得已而戒掉。戒断的过程很痛苦，一是通过意志力强行压迫抽烟的想法，二是通过大量进食来克制对香烟的渴求，虽然痛苦但最终戒掉并成功的保持了三年。今年年初因一时兴起又复吸了，不过我确信，我当时完全没有烟瘾，就是为了吸而吸的，所以严格来说不算是“复吸”，也就是说我11年的那次戒烟确实是永久有效的。而这次戒烟，与其说是看了这本书，不如说是我自己不想抽了。这书我认真看了前一半，后一半是囫囵吞枣的过的，因为已经有过成功戒烟的经历，所以我觉得没有细读的必要，但仍从书中收获了一些东西。我觉得我这次戒烟也会是成功的，虽然这才是第二天，根据很多人的经验，最多一两天就会吸上的，对此我只想说：那是因为你们还处在戒烟的初级阶段。
 
 正是因为我已经有过成功戒烟的亲身经历，又有着成功戒断后复吸上瘾并再次戒断成功的亲身经历，所以我想写篇文章，帮助那些想戒烟的朋友，之所以不直接推荐去看刚才说的那本书，是因为我觉得那书写得太罗嗦，他对各种烟民的心理进行了全面的分析，但在戒烟的具体操作上，也就是一两页的内容，且书中提到的一些具体指示，我觉得还不够，仅按他给的操作方法，我估摸着很多人戒不了。于是结合我自己的经验，谈谈到底怎样才能戒烟。
