--- a/_posts/2014-05-21-55.md
+++ b/_posts/2014-05-21-55.md
@@ -5,6 +5,8 @@ title: 像《Throne Wars》那样做游戏
 
 近来迷上了一款手游《Throne Wars》，中文名叫[王座战争]或[战争王座]，iOS、Android和WP平台均有该应用。
 
+![throne wars](http://oifrca68z.bkt.clouddn.com/zeove/image/throne-wars2.jpg)
+
 说来游戏模式有些老套了，跟几年前红极一时的网页游戏《七雄争霸》很相似，用官方的介绍就是“以单一城市管理者的身份开始，最终建立坚不可摧的王国！主宰战场，掠夺敌人的城市。在巨大的地图上和成千上万的玩家竞争的同时，组建强大的联盟”，并号称”在20多个国家都是顶级应用程序，拥有数百万玩家....”，总之吹得很大，我抱着试玩的态度下载了。
 
 玩到现在，感觉这游戏真是WP平台上的手游精品了，一是画面一流，二是设计精巧，三是跨国服务器（全世界玩家一起玩），四是节奏缓慢（玩游戏压力太大就失去了放松的意义），五是非RMB玩家也可以玩得很开心，六是联盟打群架的配合很有趣，七是游戏团队还在持续开发更多的游戏内容，让人十分期待....
@@ -14,6 +16,8 @@ title: 像《Throne Wars》那样做游戏
 说说充值那点事。国产游戏中嵌入了太多的充值内容，这非常影响玩家的体验，主要有两方面：一是迅速拉开了RMB玩家和非RMB玩家的差距，游戏本身的公平性被破坏得太厉害，会让更多的非RMB玩家很快离开游戏；另一方面是大量的充值活动内容和各种日常任务，让玩家压力太大，最后觉得太累，不想再爱了。看看《Throne Wars》怎么做的：就让你免费、尽情的玩，没有任何打扰你的充值内容，也没有任何枯燥重复的日常任务，甚至还时不时的给你一些宝箱或宝石让你惊喜一把，然后就是几个主线任务拖拖拉拉的让你慢慢完成，不知不觉你就因为游戏内容而陷入了与其他玩家之间的江湖恩怨中，无法自拔。自此，仍然没有任何可以花钱取得的特权提供给你，只是右上角的绿色宝石按钮默默的提醒你：游戏里的钱币不够？就花点你口袋里的钱币吧！跟现实生活中的规则一样，花钱买东西来武装自己，一切都是那么自然，那么水到渠成。
 
 游戏充值，也跟当地的消费习惯有很大关系。国内用户向来喜欢免费，连这么大的互联网市场，老外的企业愣是进不来或进来了也活不下去，因为他们无法理解为什么使用了别人的产品却不愿意付费，但我们中国人就是不愿意付费，我们从接触互联网的那天开始，除了给中国电信交宽带费，就没给过谁一分钱！这样的环境下，国内游戏开发商不得不将“充值”这个本来应该是设置类的功能，重点、充分甚至夸张的展现在游戏画面上最显眼的位置，甚至不惜牺牲游戏性能而动用各种特效进行加强，实在是没办法啊，这帮逼光玩不给钱，老子开销不起啊！而老外的版权或者付费意识相对更强，明白商品社会没有什么是应该免费的，所以如果真的喜欢，就应该为之付费。这并非我自己的臆想，而是因为《Throne Wars》是跨国服务器，我跟联盟内的老外玩家沟通时他们自己说出来的，多数人都购买过游戏宝石。也正是因为有良好的消费环境，所以老外做的游戏更注重游戏本身的乐趣和体验，这又进一步拉大了国产游戏和国外游戏的制作水平上的差距，真是一个鸡和蛋的问题啊！
+
+![throne wars dev](http://oifrca68z.bkt.clouddn.com/zeove/image/throne-wars4.jpg)
 
 《Throne Wars》的开发商是一个2011年成立的叫[FLARE GAMES](http://throne-wars.com/#made-by-flaregames)的公司，在他们的自我介绍中写道：
 
