--- a/_posts/2014-09-22-50.md
+++ b/_posts/2014-09-22-50.md
@@ -7,6 +7,8 @@ title: 再不纹身我们就老了
 
 我见过很多纹身，但最屌的无疑是下图这款，所谓的白色纹身。怎么做出来的不知道，但一看就很吸引人，谁如果有这样的胎记，绝对是神人天降。
 
+![wenshen](http://oifrca68z.bkt.clouddn.com/zeove/image/wenshen.jpg)
+
 中国最早的纹身恐怕是秦代的黥刑犯人，就是在犯事的人脸上刺字，当然那时是免费的。最有名的纹身应该是岳飞背上的“精忠报国”，由岳母大人亲自操刀，果然不是亲妈。最酷的可能是《水浒传》中史进的“九纹龙”，谁刺的没有交代，但想来幅面不小，估计花了不少银子。《孝经》中说“身体发肤，受之父母，不敢毁伤，孝至始也”。能看出来，在古代，只有勇猛刚强的人才敢纹身，不但痛，还要有直面世俗的勇气。这一行为影响了后世，据说现在加入黑社会，纹身也是考验条件之一，你要是没个左青龙，右白虎啥的，见面都不好意思自称黑社会。
 
 直到今天，受纹身是黑社会、不正经等传统观念的影响，纹身离普通老百姓的生活还是很远。我国的部队、警察和公务员招考也是不接受有纹身的人的，在有些服务性行业有纹身的人也是基本不考虑的，所以如果你有以上职业发展规划，不建议纹身。另外，有些特殊体质的人，比如糖尿病、心脏病、癫痫病、皮肤病、甲状腺病患者也不建议纹身，同时纹身还可能会伤及真皮造成血液感染，有染上艾滋病、乙肝等疾病的潜在风险，所以纹身还真不是人人都适合的事儿。
