--- a/_posts/2016-12-20-125.md
+++ b/_posts/2016-12-20-125.md
@@ -7,7 +7,7 @@ title: 最近在玩的iOS游戏
 
 将苹果商店推荐的大牌游戏悉数收入囊中，玩一圈下来，仅剩下Minecraft、炉石传说、纪念碑谷、BADLAND2、Shadowmatic、Sniper这几款没删，其他感觉都不是我的菜了。这些大牌游戏制作精良，口碑出众，也就无须多说了。今天介绍几款不算太出名，但我感觉也很耐玩的游戏。
 
-1.[Total war battles: Kingdom](https://itunes.apple.com/us/app/total-war-battles-kingdom/id992140314?mt=8)
+1.[Total War Battles: Kingdom](https://itunes.apple.com/us/app/total-war-battles-kingdom/id992140314?mt=8)
 
 ![Total war battles: Kingdom](https://c1.staticflickr.com/1/736/31643055111_e2395e9d7f_o.jpg)
 
@@ -23,19 +23,19 @@ title: 最近在玩的iOS游戏
 
 ![Don't Starve](https://c2.staticflickr.com/6/5594/31643054641_7e4cbd096b_o.jpg)
 
-中文名“饥荒”，跟Minecraft相似的动作冒险类求生游戏，讲述了一名科学家在一次出海中船只失事，被冲到某岛上，要利用岛上的自然资源让自己存活下去，并且抵御各种生物的威胁，最后逃出生天的故事。游戏的最终目的就是活下去，活的天数越长，最后的分数就越高。 我个人不太喜欢这种画风，但玩法还是很赞的。
+中文名“饥荒”，跟Minecraft相似的动作冒险类求生游戏，讲述了一名科学家在一次出海中船只失事，被冲到某岛上，要利用岛上的自然资源让自己存活下去，并且抵御各种生物的威胁，最后逃出生天的故事。游戏的最终目的就是活下去，活的天数越长，最后的分数就越高。我个人不太喜欢这种画风，但玩法还是很赞的。
 
 4.[Lara Croft GO](https://itunes.apple.com/us/app/lara-croft-go/id971304016?mt=8)
 
 ![Lara Croft GO](https://c1.staticflickr.com/1/277/31643054161_5046b38a93_o.jpg)
 
-中文名“劳拉快跑”（对这名我也是醉了），回合制益智类游戏，知名的古墓丽影手游版，通过巧妙的走步方式，躲避机关、障碍，拿到武器，杀死猛兽，同时收集各种宝石，一步步走出迷宫。玩过PC版的古墓丽影，就知道游戏的情景氛围了，那是相当的诡异莫测。画面号、操作好，也是一款值得收藏的休闲类手游。
+中文名“劳拉快跑”（对这名我也是醉了），回合制益智类游戏，知名的古墓丽影手游版，通过巧妙的走步方式，躲避机关、障碍，拿到武器，杀死猛兽，同时收集各种宝石，一步步走出迷宫。玩过PC版的古墓丽影，就知道游戏的情景氛围了，那是相当的诡异莫测。画面好、操作好，也是一款值得收藏的休闲类手游。
 
 5.[War and Order](https://itunes.apple.com/us/app/war-and-order/id1071744151?mt=8)
 
 ![War and Order](https://c1.staticflickr.com/1/469/31647892061_deb8ef6557_o.jpg)
 
-不要被英文名吓到了，实际是神州太岳控制的国内公司开发的，中文名“战火与秩序”。国内还有一家叫智明星通的公司开发的《列王的纷争》是Facebook上的2015年度最佳游戏，据说现在国内做游戏的都流行这个模式，先到国外留洋，然后海外归来，名利双收。游戏本身没什么好说的，跟当年的《七雄争霸》一个模式，这种游戏玩的就是个人气，一大堆人在里面打来打去，宣泄的是各种国别歧视、江湖恩怨、快意情仇，因为有了朋友，所以很耐玩。
+不要被英文名吓到了，实际是神州太岳控制的国内公司开发的，中文名“战火与秩序”。国内还有一家叫智明星通的公司开发的《列王的纷争》是Facebook2015年度最佳游戏，据说现在国内做游戏的都流行这个模式，先到国外留洋，然后海外归来，名利双收。游戏本身没什么好说的，跟当年的《七雄争霸》一个模式，这种游戏玩的就是个人气，一大堆人在里面打来打去，宣泄的是各种国别歧视、江湖恩怨、快意情仇，因为有了朋友，所以很耐玩。
 
 App Store排行榜前50的游戏我基本都玩过了，对国内最大的两家游戏商网易和腾讯，我感觉还是网易水平更高一些，毕竟游戏工作室的数量都比腾讯多不少。腾讯向来给人的印象就是没钻寸步难行，所以看到腾讯出的或者收购的游戏我基本都绕过。网易旗下红得发紫的《阴阳师》做工很好，但玩法枯燥，就是满屏幕的各种光污染，玩了两天就弃坑。《大航海之路》做得有点过于复杂了，操作也不太便捷，好不容易找到原创的光荣出品的《大航海时代5》，结果网络经常出问题，人气也严重不足，所以也没有继续玩下去。
 
