--- a/_posts/2016-12-23-126.md
+++ b/_posts/2016-12-23-126.md
@@ -1,6 +1,6 @@
 ---
 lay out: post
-title: 给Jekeyll静态博客添加Https
+title: 给Jekyll静态博客添加Https
 ---
 
 换成静态博客以后，我的感受就一个字：爽，速度快不说，一切还都免费，还能模仿码农用代码搞博客，折腾网站不就是向程序员看齐嘛。
