--- a/note/2017.md
+++ b/note/2017.md
@@ -1,5 +1,5 @@
 ---
-layout: favo
+layout: note
 ---
 
 QQ很久没有叮咚了，一是没人发消息给我，二是我关了QQ的声音。现在除了几个还在接收消息的群外，其他的群都屏蔽了，有事才上去看看。我从来就没写过QQ空间，那些以前经常写空间的朋友也多数停止了喧闹。每次登陆QQ，头像黑压压的一片，红色名字的VIP也越来越少了。这不是我一个人的QQ，是整个QQ的现状。
