--- a/note/欧美名画.md
+++ b/note/欧美名画.md
@@ -2,7 +2,109 @@
 layout: note
 ---
 
-![Hip Hip Hurrah! Artists' Party at Skagen](https://c7.staticflickr.com/1/353/31746229950_917cc15b26.jpg) 
+![Steamboat Leaving Boulogne](https://c3.staticflickr.com/1/428/32057590842_ef500b6001.jpg) 
+
+**Steamboat Leaving Boulogne - 1864**
+
+Edouard Manet became one of the most famous painters in Paris after exhibiting several works that shocked the public with their bold treatment of form, color, space, and sexually oriented themes. Probably seeking relief from the harsh criticism he had received, he left Paris and went on a vacation with his family in the northern port of Boulogne-sur-Mer. This is where he painted this painting, one of his earliest presenting the sea.
+
+This work represent a breakthrough for the artist. Although his bold, flat brushwork outraged his critics—what wasn't surprising for Manet—it inspired his Impressionist colleagues in the next decade.
+
+Look at the raised horizon, flattened objects and space, and asymmetrical composition—they were inspired by Japanese woodblock prints, which had become extremely popular in France at the time. Manet rendered the water in lively horizontal strokes of blue and green paint, which anticipated the sketch-like Impressionist style.
+
+---
+
+![Sewing the Sail](https://c3.staticflickr.com/1/301/31830594130_59994a8a8a.jpg) 
+
+**Sewing the Sail - 1896**
+
+The painting is one of the most important masterpieces shown on the exhibition "Sorolla in Paris" at Museo Sorolla in Madrid. An exhibition that traces the history of the international recognition of Sorolla, from his first trip to Paris, with only twenty-three years, until his victory in the large group exhibitions and his definitive consecration in his individual exhibition at the Gallery Georges Petit in Paris in 1906.
+
+Sorolla completed "Sewing the sail" during a summer stay in Cabanil. This composition, which seems to be inspired by a popular stamp, shows women in a landscaped courtyard that sew a white sail, which inflates the dimensions of light. Awarded in Munich and Vienna, the artist sent this work to the Exhibition of Fine Arts in Madrid in 1889.
+
+---
+
+![A Song of Spring](https://c5.staticflickr.com/1/610/31830597060_e78170f3eb.jpg) 
+
+**A Song of Spring - 1913**
+
+Maximilian Lenz was an Austrian painter, graphic artist and sculptor. During his career's most important period, he was a Symbolist, but later his work became increasingly naturalistic.
+
+In the early 1890s Lenz worked as a designer of banknotes in Buenos Aires. In 1897, after returning home, he became one of the founding members of the Secession in Vienna, and participated several times in its exhibitions. His One World draws on the time's prevailing currents, including dreamlike and fantastic imagery painted in intense colour. It was shown at the Fourth Exhibition of the Vienna Secession in spring 1899, and received critical praise for its "graceful charm and dreamy yet sparkling beauty" and its mood of "pure grace and musical euphony". The famous Secession's periodical Ver Sacrum featured the work in the same year.
+
+This painting was influenced by the dancer Isadora Duncan's 1904 stay in Vienna, sharing her symbolic themes of cyclic renewal and rebirth and featuring mediaeval costume. These ideas and a connection with dance are also prominent within Klimt's work, and the Symbolist movement as a whole.
+
+---
+
+![The Blue Rigi, Sunrise](https://c1.staticflickr.com/1/487/31830588920_a8c4f85b91.jpg) 
+
+**The Blue Rigi, Sunrise - 1842**
+
+"The Blue Rigi", a misty, high-backed mountain which looms over Lake Lucerne in was created during a series of Turner's visits to Italy and Switzerland in the 1830s and 40s. It is one of his most famous watercolors.
+
+The changing effects of light and colour, sun and mist so fascinated Turner that he painted the view obsessively. As well as the Blue Rigi, there is a Red Rigi, a Dark Rigi, and upwards of 30 sketches and drawings of the mountain, plus many other prospects of the Alps around Lucerne. They made a powerful impact back in Britain and, due in part to Turner’s work, The Rigi quickly acquired an iconic status among the leisured classes.
+
+---
+
+![The Misses Vickers](https://c3.staticflickr.com/1/705/31830591450_3fdfbc714d.jpg) 
+
+**The Misses Vickers - 1884**
+
+The Times of May 22nd 1886 reviewed the painting thus: "Three young ladies, painted in a thin and almost ghostly fashion, gaze straight out of the picture at you. They seem as insubstantial as beings from another world; these faces, medicated rather than painted, these cloudy dresses, these unsubstantial chairs and tables, are they portraits or are they mere suggestions for portraits? Seeing the picture for the first time... one inevitably answers that they are mere sketches; that the artist no doubt intends to carry his work much further. But a second and a third examination bring one to a different mind, and almost, if not quite, convince one that this art, at once very bold and very subtle, is legitimate; that the painter has really got in this apparent slighting the truth about his sitters, and that no further touches could put more life or more character into face or form or accessories."
+
+---
+
+![Mother](https://c1.staticflickr.com/1/336/31365007024_f7c567d339.jpg) 
+
+**Mother - 1895**
+
+This canvas commemorates the birth of Elena, the artist’s younger daughter, on 12 July 1895, although the painting was not completed until 1900.
+
+Mother and daughter are shown resting peacefully or perhaps exhausted, turned towards each other, with only their heads emerging from a sea of white—the baby still rosy from the birth and the mother with a subtle pallor. This canvas is an exceptional technical feat and also one of the best examples of Sorolla’s ability to transmit intense physical sensations and equally intense emotion through his handling of light and colour. The emotion of the husband/father and the artist’s gaze are blended in the filtered light which caresses the whiteness from which the two heads emerge, as if the whole world is reduced to the all-absorbing intimacy of this moment of repose.
+
+---
+
+![The Cardsharps](https://c5.staticflickr.com/1/583/31365013204_22daf65501.jpg) 
+
+**The Cardsharps - 1595**
+
+In "The Cardsharps", the players are engaged in a game of primero, a forerunner of poker. Engrossed in his cards at left is the dupe, unaware that the older cardsharp signals his accomplice with a raised, gloved hand (the fingertips exposed, better to feel marked cards). At right, the young cheat looks expectantly toward the boy and reaches behind his back to pull a hidden card from his breeches. No party can see or know everything they might wish to. There are things that the viewer can't observe though the figures can, and things the figures can't observe and the viewer can. The scene is constructed as a circuit of seeing and not-seeing, knowledge and ignorance, trust and deceit. The boy trusts in the invisibility of his cards. The cheats trust in the invisibility of their scheme. They must trust in their own alliance too. And something the viewer can see suggests this trust may be misplaced. Caravaggio has treated this subject not as a caricature of vice but in a novelistic way, in which the interaction of gesture and glance evokes the drama of deception and lost innocence in the most human of terms.
+
+---
+
+![Waterlilies](https://c5.staticflickr.com/1/579/31830586380_b5c522b852.jpg) 
+
+**Waterlilies - 1904**
+
+On this day in 1840, one of the founders of French Impressionism, the great Claude Monet was born. Monet was the most consistent and prolific practitioner of the movement's philosophy. He continued to develop Impressionist assumptions throughout his long life.
+
+Water Lilies were the main focus of Monet's artistic production during the last thirty years of his life. He created approximately 250 oil paintings with these flowers. What's interesting, many of the works were painted while Monet suffered from cataracts — but today's painting is not one of them.
+
+Every year, from spring to fall, the artist set up easels around the pond next to his home in Giverny so he could capture sensations on several canvases at once and rework them later in his workshop. The Waterlilies at MuMa, painted in 1904, are part of a suite of forty-eight canvases known as, "Waterlilies, a Series of Waterscapes"—shown at Durand-Ruel’s gallery in Paris in 1909.
+
+In this painting Monet shows that he is a god of color. The Giverny garden became his laboratory that led to a genuine transformation of his paintings, where color prevailed over form. His undertaking signalled the abstraction that would be developed by the artists of the New York School in the wake of World War II.
+
+---
+
+![Wind-Swept Sands](https://c5.staticflickr.com/1/399/31364997444_2465b418d0.jpg) 
+
+**Wind-Swept Sands - 1894**
+
+William Merritt Chase was an American painter, known is an exponent of Impressionism and as a teacher. He is also responsible for establishing the Chase School, which later would become Parsons The New School for Design. Like most of his American contemporaries, Chase was eclectic, borrowing with pride and pleasure from many international styles, past and present. Chase's teaching method was rooted in the French Impressionist and in the Barbizon School tradition of painting outdoors in order to take advantage of natural light and changing weather conditions. Between 1891 and 1901, Chase was a highly influential teacher at the Shinnecock Summer Art School in Long Island, New York. This is where he painted "Wind-Swept Sands". As you can see, the rapid brushstrokes and the overall gray tonality indicate an overcast day, while a hint of blue at the horizon suggests the elusive presence of the sun.
+
+---
+
+![Portrait with Geraniums](https://c5.staticflickr.com/6/5482/32168178876_04ea7fc5fa_c.jpg) 
+
+**Portrait with Geraniums - 1904**
+
+a portrait by Stanislaw Wyspianski, a true man of Renaissance (but living in the 19th century of course). Wyspianski was a playwright, poet, theatre director, originator of modern Polish theatre and of course — an artist.For a short time he approached Impressionism in his easel paintings, but the characteristic feature of his monumental polychromes and stained glass windows was the decorativeness of synthetics and nabis, strengthened with a dramatic expression. In his sharply outlined portraits he got out the psychology of personages with a strong, frequently curved, line— whereas children were treated with lyricism. In landscapes he combined the observation of nature with the eternal mystery of nature’s life, complicating their symbolic meaning with historiosophic messages. After a long fight with disease, he died prematurely at the age of 38.
+
+Wyspianski most frequently used soft pastel techniques; his first pastel drawings were produced between 1890 and 1894. They mainly present the artist's family, friends and other artists. Here the artist portraited a 16 year old Liza Parenska, a daughter of a famous Cracow doctor, with a clenched fist and face expressing confidence. Liza with such a determination in her eyes seems to be quite a grown up young lady. Unfortunately,fate was not kind to her — she died of a drug overdose when she was 33, widowed a couple of months earlier, depressed and disillusioned.
+
+---
+
+![Hip Hip Hurrah! Artists' Party at Skagen](https://c7.staticflickr.com/1/353/31746229950_917cc15b26_z.jpg) 
 
 **Hip Hip Hurrah! Artists' Party at Skagen - 1888**
 
