--- a/note/参与感.md
+++ b/note/参与感.md
@@ -42,3 +42,104 @@ layout: note
 
 三个战略：做爆品，做粉丝，做自媒体。 三个战术：开放参与节点，设计互动方式，扩散口碑事件。
 ==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #329-330的标注 | 添加于 2017年2月26日星期日 下午8:31:51
+
+用户体验的核心是为谁设计
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #335-337的标注 | 添加于 2017年2月26日星期日 下午8:33:27
+
+“为谁设计”，很多人都可能忽略，但这是用户体验设计的原点，在它确定之后，设计坐标系统才能明确下来；而如果没有它，就无法正确定位产品好用、好看的努力方向，产品设计就会很苍白，因为不同用户群体的需求可谓千差万别。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #421-422的标注 | 添加于 2017年2月26日星期日 下午8:46:54
+
+最重要的是团队，其次才是产品，有好的团队才有可能做出好产品。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #421-422的标注 | 添加于 2017年2月26日星期日 下午8:47:07
+
+创业成功最重要的因素是什么？ 最重要的是团队，其次才是产品，有好的团队才有可能做出好产品。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #442-443的标注 | 添加于 2017年2月26日星期日 下午8:50:39
+
+员工有创业心态就会自我燃烧，就会有更高主动性，这样就不需要设定一堆的管理制度或KPI考核什么的。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #502-503的标注 | 添加于 2017年2月26日星期日 下午9:02:06
+
+竞品思维在前期分析可以使用，但在做产品过程中是很忌讳的，变成只关注对手而不是用户。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #544-545的标注 | 添加于 2017年2月26日星期日 下午9:09:28
+
+一开始只专注忠诚度，通过口碑传播不断强化这一过程，到了足够的量级后，我们才投入去做知名度。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #549-550的标注 | 添加于 2017年2月26日星期日 下午9:10:25
+
+对于一个品牌，知名度意味着能让用户听见，美誉度意味着走到了用户身边，而忠诚度则代表已在用户心里。所谓的粉丝文化就是看你的品牌有多少忠诚的用户。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #577-580的标注 | 添加于 2017年2月26日星期日 下午9:17:21
+
+用户群体性的无意识认知，最终选择决定了最适合该群体的行为方式，而这其实是最优化的结果呈现。粉丝经济效应出现后，有的企业也看到了其中价值，但他们恰恰做反了，在开始做用户互动之前就刻意策划设计了粉丝群体名称等，反而让用户失去了至关重要的参与感，这并不可取。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #585-586的标注 | 添加于 2017年2月26日星期日 下午9:19:14
+
+粉丝效应不可设计，但可因势利导，应给予他们更多可参与的互动方式。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #661-662的标注 | 添加于 2017年2月26日星期日 下午9:37:17
+
+创业的产品能够成功的前提是先挠自己的痒处。如果自己都不能真心满意，又如何去打动用户？真正在业内能做到颠覆、极致的公司往往都于此相通。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #762-763的标注 | 添加于 2017年2月27日星期一 下午9:00:09
+
+全场有多少个尖叫点？这些尖叫点都需要预先理出来合理安排，最好是保证每5分钟就会出现一个尖叫点，贯穿全场才能做到全程无尿点。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #855-859的标注 | 添加于 2017年2月27日星期一 下午9:11:50
+
+1.如果是有明确商业目的，有预谋、成规模的攻击，就必须第一时间警觉，敢于果断“亮剑”。雷总之前也说过，我们从不惹事，但绝不怕事。 2.对产品或服务的吐槽，要快速回应，能解决的以最快速度、最大投入第一时间解决，不能马上解决的，就要果断道歉及善后。 3.对于那些误解，只要不伤筋动骨，在策略层面大可闭眼不管，互联网传播太快，这些误解很快会被新的信息覆盖掉。 4.对于有代表性的、规模出现的误解，我们则要“亮出底裤”，进行系统性解决。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #867-868的标注 | 添加于 2017年2月27日星期一 下午9:12:34
+
+没有什么能比眼见为实的真相和坦诚相待的态度更有力、更能打动人了。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #884-885的标注 | 添加于 2017年2月27日星期一 下午9:15:50
+
+新营销的第一步，让自己的公司成为自媒体。在“参与感三三法则”里，做自媒体是公司要坚持的内容战略，也是品牌战略。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #1428-1430的标注 | 添加于 2017年2月27日星期一 下午10:33:16
+
+产品点分为卖点和噱头，卖点是用户愿意为之掏钱的，噱头是有意思但用户不会为之掏钱的。卖点定义分为两类：一级卖点和二级卖点。一级卖点只有一个，这样用户才记得住，如果你说三到四个就等于没说。二级是辅助描述一级的，一般有两到三个。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #1581-1582的标注 | 添加于 2017年2月27日星期一 下午10:51:23
+
+图片可以表现形象和色彩，文字还需要阅读和转译。从信息传递的角度，视频比图片还要高效。一图胜千言，一个视频胜千图。当然，如果有好的视频素材，也别忘了设计一个吸引人的图片封面。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #1696-1698的标注 | 添加于 2017年2月27日星期一 下午11:08:31
+
+怎样从开始设计的时候就能够方便用户来做二次创作，能够参与进来。然后根据用户参与的意见不断完善我们的产品，用户在参与过程中，也会不断地获得成就感，这个链条会形成正向循环。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #1770-1773的标注 | 添加于 2017年2月27日星期一 下午11:16:52
+
+无印良品诞生于1980年，战后80年代的日本发展到太过追求消费的阶段，很多产品在设计上是装饰过度，后来无印良品主张设计刚好够用的产品。“这样就好”它是为需求设计，而不是为欲望设计，它用了世界上最好的设计师，用了最好的生产工艺和环节，用合理的价格输出。
+==========
+参与感:小米口碑营销内部手册 (黎万强)
+- 您在位置 #1799-1801的标注 | 添加于 2017年2月27日星期一 下午11:20:54
+
+未来属于能真正理解消费情绪的品牌，而品牌背后的团队除了工程师，更应该有设计师和艺术家，他们都是对生活高感知的人群。
+==========
+
