--- a/_posts/2017-06-02-129.md
+++ b/_posts/2017-06-02-129.md
@@ -27,4 +27,4 @@ title: 从《白鹿原》看子女的教育
 
 话又说回来，小说毕竟是小说，现实生活中，我仍然相信基因和教育的作用，对人的影响是最大的。像鹿子霖这种几乎一无是处的人物，是很难有杰出的后代的，而像白嘉轩这样的成功人物，其后代也绝不会是孬种，所谓“龙生龙，凤生凤，老鼠的儿子会打洞”绝非故意歧视平民百姓，现实中这样的案例占了绝大多数，就像我对政治的看法一样，人类社会从来都是精英政治，能把握社会大局和发展方向的，绝不会是普通人，因为他的基因和所受的教育必须能支撑他要做的事情。我承认这是一个得罪人的观点，也是一个悲哀的观点，正如很多人知道毛泽东是农民出身，但不知道他爸是个富农。
 
-也别灰心，至少还有朱重八这种屌丝变飞龙的案例会激励我们砥砺前行。
+也别灰心，至少还有朱重八这种屌丝变飞龙的案例会激励我们勇敢前行。
