--- a/_posts/2017-07-08-130.md
+++ b/_posts/2017-07-08-130.md
@@ -5,13 +5,13 @@ title: 了不起的Google Adwords
 
 前阵子到Google Adwords体验中心学习了几天，了解了一下GA广告的基本知识，与一些做外贸的客户简单交流了一下，隐隐觉得谷歌才算是真正的大数据公司。
 
-得益于二十年搜索引擎开放使用的数据沉淀，及谷歌不断进步的数据统计方法，使得其无论在Google搜索，还是Youtube视频网站，还是高达200多万的全球联盟网站，或是Google Shopping这样的类目网站，都能为客户提供精准的网络广告投放，并能实时反馈广告效果，还能自主控制广告费用，这样的广告系统堪称完美，难怪谷歌能成为全球最值钱的公司之一。
+得益于二十年搜索引擎开放使用的数据沉淀，及谷歌不断进步的数据统计方法，使得其无论在Google搜索，还是Youtube视频网站，还是高达200多万的全球联盟网站，或是Google Shopping这样的类目网站，都能为客户提供精准的网络广告投放，并能实时反馈效果，还能自主控制费用，这样的广告系统堪称完美，难怪谷歌能成为全球最值钱的公司之一。
 
 ![Google Adwords](https://farm5.staticflickr.com/4259/34956856744_fc394ca008.jpg)
 
-谷歌广告投放大体有两种方式：广告客户自己充值，自己投放，自己优化；交由第三方服务公司代为投放和优化。相较而言，交给更为专业的第三方去运作，更适合大多数客户，特别是当你看到GA广告大后台的时候，你会发现它其实是个蛮复杂的东西。虽然很多给出的数据分析结果和图表并不难懂，但你难以理解这些数据背后的输出逻辑，因此若没有三五年的网络运营或搜索实操经验，很难优化这些数据，用更少的钱得到更好的回报，换成美国第一家百货商店创始人约翰沃纳梅克的名言，就是：我知道在广告上的投资有一半是无用的，但我不知道是哪一半。
+谷歌广告投放大体有两种方式：客户自己充值，自己投放，自己优化；交由第三方服务公司代为投放和优化。相较而言，交给更专业的第三方去运作，更适合大多数客户，特别是当你看到GA广告大后台的时候，你会发现它其实是个蛮复杂的东西。虽然很多给出的数据分析结果和图表并不难懂，但你难以理解这些数据背后的输出逻辑，因此若没有三五年的网络运营或搜索实操经验，很难优化这些数据，用更少的钱得到更好的回报，换成一句名言就是：我知道在广告上的投资有一半是无用的，但我不知道是哪一半。
 
-第三方服务公司的数据优化师相对而言更专业，他起码更熟悉SEO的若干技巧或SEM的竞品分析，有句调侃的话是他至少浪费了很多客户的钱才积累了今天的经验。所以如果你有GA广告投放的需求，而你又缺乏相关的行业经验，建议最好找第三方服务公司来帮你投放和优化，借助专业力量总是更省力而且见效更快。
+第三方服务公司的数据优化师相对而言更专业，他起码更熟悉SEO的若干技巧或SEM的竞词分析，有句调侃的话是他至少浪费了很多客户的钱才积累了今天的经验。所以如果你有GA广告投放的需求，而又缺乏相关的行业经验，建议最好找第三方服务公司来帮你投放和优化，借助专业力量总是更省力而且见效更快。
 
 有人说GA广告排名有黑箱之嫌，因为它的广告评级公式是：出价×质量得分×附加信息的预期效果，而质量得分又取决于三项：预计点击率、广告相关性和着陆页体验，很多环节似乎都没有准确的定义，给人的感觉很模糊，所以会怀疑GA广告是否有黑箱操作之嫌。我认为不会，GA广告是一套复杂且统一的算法，所有客户的广告投放都是按照这套算法执行，至于谷歌自己会不会故意设计坑钱的环节，我只想说，肯定百度更守法：
 
