--- a/_posts/2017-10-10-131.md
+++ b/_posts/2017-10-10-131.md
@@ -21,4 +21,4 @@ title: 挖坑和打井的思考
 
 前四十年我在职场挖了无数的坑，目的只为学东西，也学到了很多，不敢说“什么大风大浪没见过”，至少能应付“企业那点事”，且已明白什么适合我，什么不适合我了，这或许就是成长吧。而整个的过程，本身就是厚积薄发的准备，前四十年挖坑是为了勘测精准，人生下半场就应当全力以赴，打井出油！
 
-挖坑无数，方能打井有道，明白这个道理，花了我四十年。
+挖坑无数，方能打井有道，明白这个道理，花了我四十年，笨呐！
