--- a/_posts/2017-10-12-132.md
+++ b/_posts/2017-10-12-132.md
@@ -55,4 +55,4 @@ title: 我理想中的三国游戏
 
 感觉自己在写《三国世界》的序篇了，如明早醒来我还对这件事耿耿于怀，也不排除我会着手写分章剧情，直至哪天真的搞出一个鸿篇巨制，中国版《魔兽世界》就跟大家见面了，敬请期待。
 
-周郎，看你羽扇纶巾的立在城头，好一把青龙偃月刀劈嚓闪下，那诸葛小儿早已人头落地，只见你捋了捋美髯长须，啊渣渣吼了起来：对酒当歌，人生几何？ 譬如朝露，去日苦多...
+周郎，看你羽扇纶巾的立在城头，好一把青龙偃月刀劈嚓闪下，那诸葛小儿早已人头落地，只见你捋了捋美髯长须，啊喳喳吼了起来：对酒当歌，人生几何？ 譬如朝露，去日苦多...
